[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.19"
msg = { path = "../msg" }
pastebin = { path = "../pastebin" }
serde = "1.0"
rsa = { version = "0.6", features = ["serde"] }
rand = "0.8"
serde_json = "1.0.86"
anyhow = "1.0"
either = { version = "1.8", features = ["serde"] }