[package]
name = "msg"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
generic-array = { version = "0.14", features = ["serde"] }
typenum = "1.15"
rand = "0.8"
aes = "0.8"
serde_cbor = "0.11"
either = { version = "1.8", features = ["serde"] }
serde-encrypt = "0.7"