[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
msg = { path = "../msg" }
curl = { version = "0.4", features = ["http2"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
xml-rs = "0.8"
rand = { version = "0.8", optional = true }

[features]
mock = ["rand"]
