[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
gist = { path = "../gist" }
msg = { path = "../msg" }
anyhow = "1.0"
rand = "0.8"
generic-array = { version = "0.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-encrypt = "0.7"
either = { version = "1.8", features = ["serde"] }
